--- a/package.json
+++ b/package.json
@@ -15,10 +15,24 @@
     "@nuxt/fonts": "^0.11.4",
     "@nuxt/icon": "^2.0.0",
     "@nuxt/image": "^1.11.0",
+    "@pinia/nuxt": "^0.11.2",
+    "@vee-validate/zod": "^4.15.1",
+    "@vueuse/core": "^13.7.0",
     "better-sqlite3": "^12.2.0",
+    "dayjs": "^1.11.13",
     "eslint": "^9.33.0",
     "nuxt": "^4.0.3",
+    "ofetch": "^1.4.1",
+    "pinia": "^3.0.3",
+    "vee-validate": "^4.15.1",
     "vue": "^3.5.18",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "zod": "^3.25.76"
+  },
+  "devDependencies": {
+    "@types/node": "^24.3.0",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.12"
   }
 }
