--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@pinia/nuxt": "^0.11.2",
     "@vee-validate/zod": "^4.15.1",
     "@vueuse/core": "^13.7.0",
+    "@vueuse/nuxt": "^13.7.0",
     "better-sqlite3": "^12.2.0",
     "dayjs": "^1.11.13",
     "eslint": "^9.33.0",
@@ -30,9 +31,11 @@
     "zod": "^3.25.76"
   },
   "devDependencies": {
+    "@tailwindcss/vite": "^4.1.12",
     "@types/node": "^24.3.0",
     "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.12"
+    "tailwindcss": "^4.1.12",
+    "typescript": "^5.9.2",
+    "vue-tsc": "^3.0.6"
   }
 }
